fix(_sass): dark mode + css

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -5,6 +5,30 @@
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 
-// If you want to turn off dark background for syntax highlighting, comment or delete the below line.
-// @import "minima/fastpages-dracula-highlight";
 @import "minima/dark-mode";
+
+.site-header {
+  font-family: "IBM Plex Mono", monospace;
+  border: none;
+}
+
+.site-header a:hover {
+  color: $med-emph !important;
+  text-decoration: none !important;
+}
+
+.home {
+  font-family: "Roboto Mono", monospace !important;
+}
+
+.page-content {
+  font-family: "Roboto", sans-serif;
+}
+
+.site-footer {
+  font-family: "IBM Plex Mono", monospace;
+  border: none;
+}
+
+// If you want to turn off dark background for syntax highlighting, comment or delete the below line.
+@import "minima/fastpages-dracula-highlight";
